--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -6,7 +6,7 @@
   "files": [
     "eslint-preset.js"
   ],
-  "dependencies": {
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "8.12.0",
@@ -19,6 +19,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "typescript": "~4.6.2"
   }
 }
